* Changed setup.py to point to the .rst docs.
* Fixed the Makefile to do "check" against the lib name, not the project name.
* Added more TODO items.
* Renamed all internal references of publishbot to prakasha.
* Added an exceptions module.
* Updated the key-getter to raise a custom exception if the server keys aren't
  present (and to give instructions on how to generate them).

2012-04-21

* More TODO changes.
* Started on README changes.
* Updated TODO.
* Updated ignore files.
* Added Hinglish font "bot" images.
* Updated banner in configuration.
* Tweaked Makefile.
* Added a setup.py file.
* Added distutil wrappers.
* Added a meta file.
* Added git ignore file.
* Updated ignores.
* Changed docs to ReST files.
* Added TODO and docs.
* Various admin updates.
* Added another .ignore option as well as a Makefile.
* Renamed README from .txt to .rst.
* Added project logos.

2012-04-17

* More tweaks to the API.
* Fixed bad call to topic.
* Renamed methods.
* Added new methods.
* Added docstrings.
* Added more CommandAPI methods and placed them in the default namespace.
* Added a command api for use inside the publishbot shell (via ssh).
* Converted all services to named services.
* Separated logger and rotator in config and service setup.
* Added support for MOTD or a banner, though there's still a clearscreen
  happening (in order to currently see the banner, you have to scroll up).
* Cleaned up namespace for SSH Python shell.
* Added support for SSH'ing into publishbot.
* Turns out the nick is that of who's logged in, not who actually set the
  topic.
* Added config options for SSH and tweaked port numbers.
* Added more support for displaying what a channel's topic was.
* First attempt at getting topic changes logged.
* Playing around with some shell possibilities. Probably going to delete this
  and use a conch shell.

2012-04-16

* Added a script to generate SSH keys.
* Added some quick scripting for a raw IRC client.


2012-04-11
