@@ -12,3 +12,8 @@ class MissingSSHServerKeysError(Error):
     """
     SSH server keys not found. Generate them with ./bin/make-keys.sh.
     """
+
+
+class IllegalAPICommand(Error):
+    """
+    """
